--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@mankins/svelte-adapter-express": "^0.0.5",
 		"@sveltejs/adapter-node": "^1.0.0-next.49",
 		"@sveltejs/kit": "next",
+		"@types/compression": "^1.7.2",
 		"@types/express": "^4.17.13",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"node-sass": "^6.0.1",
+		"express": "^4.17.1",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"sass": "^1.41.1",
+		"socket.io": "^4.2.0",
+		"socket.io-client": "^4.2.0",
 		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.9.4",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"express": "^4.17.1"
-	}
+	"type": "module"
 }
