--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "app",
-	"version": "0.0.1",
+	"version": "0.5.0",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -22,6 +22,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"express": "^4.17.1",
+		"nanoid": "^3.1.25",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"sass": "^1.41.1",
