update from mac

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"esm": "^3.2.25"
+	}
 }
